--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mel trys to code</title>
-    <script defer src="src/index.js" charset="utf-8"></script>
+    <script defer src="index.js" charset="utf-8"></script>
 </head>
 <body>
     <h1>Here is your Kanye West Quote</h1>
